--- a/man1/ministat.1
+++ b/man1/ministat.1
@@ -28,7 +28,7 @@
 .Os
 .Sh NAME
 .Nm ministat
-.Nd statistics utility
+.Nd утилита для статистики
 .Sh SYNOPSIS
 .Nm
 .Op Fl Anqs
@@ -38,44 +38,44 @@
 .Op Fl w Op width
 .Op Ar
 .Sh DESCRIPTION
-The
+Команда
 .Nm
-command calculates fundamental statistical properties of numeric data
-in the specified files or, if no file is specified, standard input.
+вычисляет основные статистические свойства числовых данных
+в указанных файлах или, если файл не указан, на стандартном вводе.
 .Pp
-The options are as follows:
+Доступны следующие опции:
 .Bl -tag -width Fl
 .It Fl A
-Just report the statistics of the input and relative comparisons,
-suppress the ASCII-art plot.
+Только отчет о статистике входных данных и относительных сравнениях,
+подавить ASCII-графику.
 .It Fl n
-Just report the raw statistics of the input, suppress the ASCII-art plot
-and the relative comparisons.
+Только отчет о сырых статистических данных ввода, подавить ASCII-графику
+и относительные сравнения.
 .It Fl q
-Suppress printing of summary statistics and data-set names; typically for use
-alongside
+Подавить печать сводной статистики и имен наборов данных; обычно используется
+наряду с
 .Fl n .
 .It Fl s
-Print the average/median/stddev bars on separate lines in the ASCII-art
-plot, to avoid overlap.
+Выводить полосы среднего/медианы/стандартного отклонения на отдельных строках в ASCII-графике,
+чтобы избежать перекрытия.
 .It Fl C Ar column
-Specify which column of data to use.
-By default the first column in the input file(s) are used.
+Указать, какой столбец данных использовать.
+По умолчанию используется первый столбец во входных файлах.
 .It Fl c Ar confidence_level
-Specify desired confidence level for Student's T analysis.
-Possible values are 80, 90, 95, 98, 99 and 99.5 %
+Указать желаемый уровень доверия для анализа стьюдента Т.
+Возможные значения: 80, 90, 95, 98, 99 и 99.5 %
 .It Fl d Ar delimiter
-Specifies the column delimiter characters, default is SPACE and TAB.
-See
+Указывает символы разделителя столбцов, по умолчанию SPACE и TAB
+., для подробностей смотрите
 .Xr strtok 3
-for details.
+.El
 .It Fl w Ar width
-Width of ASCII-art plot in characters.
-The default is the terminal width, or 74 if standard output is not a
-terminal.
+Ширина ASCII-графика в символах.
+По умолчанию используется ширина терминала, или 74, если стандартный вывод не является
+терминалом.
 .El
 .Pp
-A sample output could look like this:
+Пример вывода может выглядеть следующим образом:
 .Bd -literal -offset indent
   $ ministat -s -w 60 iguana chameleon
   x iguana
@@ -88,17 +88,17 @@ A sample output could look like this:
       N        Min        Max     Median        Avg       Stddev
   x   7         50        750        200        300    238.04761
   +   5        150        930        500        540    299.08193
-  No difference proven at 95.0% confidence
+  Разница не доказана с уровнем доверия 95.0%
 .Ed
 .Pp
-If
+Если
 .Nm
-tells you, as in the example above, that there is no difference
-proven at 95% confidence, the two data sets you gave it are for
-all statistical purposes identical.
+сообщает вам, как в приведенном выше примере, что нет различий
+доказаны при уровне доверия 95%, то два набора данных, которые вы ему дали,
+по всем статистическим показателям идентичны.
 .Pp
-You have the option of lowering your standards by specifying a
-lower confidence level:
+У вас есть возможность снизить свои стандарты, указав
+низкий уровень доверия:
 .Bd -literal -offset indent
   $ ministat -s -w 60 -c 80 iguana chameleon
   x iguana
@@ -111,27 +111,26 @@ lower confidence level:
       N        Min        Max     Median        Avg       Stddev
   x   7         50        750        200        300    238.04761
   +   5        150        930        500        540    299.08193
-  Difference at 80.0% confidence
+  Разница с уровнем доверия 80.0%
         240 +/- 212.215
         80% +/- 70.7384%
-        (Student's t, pooled s = 264.159)
+        (стюдента Т, пулованный s = 264.159)
 .Ed
 .Pp
-But a lower standard does not make your data any better, and the
-example is only included here to show the format of the output when
-a statistical difference is proven according to Student's T method.
+Однако более низкий стандарт не делает ваши данные лучше, и
+пример приведен здесь только для того, чтобы показать формат вывода, когда
+статистическая разница доказана согласно методу стьюдента Т.
 .Sh SEE ALSO
-Any mathematics text on basic statistics, for instances Larry Gonicks
-excellent "Cartoon Guide to Statistics" which supplied the above example.
+Любой математический текст по основным статистическим данным, например "Карикатурное руководство по статистике" Ларри Гоника, который предоставил приведенный выше пример.
 .Sh HISTORY
-The
+Команда
 .Nm
-command was written by Poul-Henning Kamp out of frustration
-over all the bogus benchmark claims made by people with no
-understanding of the importance of uncertainty and statistics.
+была написана Пулом-Хеннингом Кампом из-за разочарования
+всеми ложными утверждениями о бенчмарках, сделанными людьми без
+понимания важности неопределенности и статистики.
 .Pp
-From
+С версии
 .Fx 5.2
-it has lived in the source tree as a developer tool, graduating
-to the installed system from
+она прожила в исходном дереве как инструмент разработчика, получив
+установленную систему с
 .Fx 8.0 .
